Fix content div shrinking when screen is too small

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -110,7 +110,7 @@ nav {
 .container-content {
   max-width: 960px;
   display: flex;
-  flex: 1;
+  flex: 1 0 auto;
   align-items: center;
   flex-direction: column;
 
